--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
   </div>
   <script>
     // CONFIGURATION - Update this URL whenever your content changes
-    const LATEST_URL = 'https://textarea.my/#q8zPz8_n4irJyCxWyCxWSFQoSS0u4eLi4gIA';    
-    // Redirect immediately
+    const LATEST_URL = 'https://textarea.my/#q8zPz8_n4irJyCxWyCxWSFQoSS0u4eLiykktKVYoTk1V4OJKSUsHYy4uLgA=';    // Redirect immediately
     window.location.replace(LATEST_URL);
   </script>
 </body>
