Add cache-busting query parameter to force fresh page loads

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <script>
     // CONFIGURATION - Update this URL whenever your content changes
     const LATEST_URL = 'https://textarea.my/#jYxLCgJBDET3dYpaea-MnY5h2g50IuLtZRyXLiwoqA-8V0QEUDdPelJYmgVgaCVTlUDr9jGA4_Rp3CL2u6x9aEFMfKL1DkDGYPdpupLXFZnafm7QZbmaIZtZqnWcGF544v5v2B7Fp3hBOLxqKHGPpaTMxiPhqzc=';    // Redirect immediately
-    window.location.replace(LATEST_URL);
+    window.location.replace(LATEST_URL + '?t=' + Date.now());
   </script>
 </body>
 </html>
